--- a/sass/Utils/_keyframes.scss
+++ b/sass/Utils/_keyframes.scss
@@ -1,28 +1,6 @@
 @import "../Utils/variables.scss";
 
-@keyframes heart-in{
-    from {
-        clip-path: circle(0%);
-        opacity: 1;
-    }
-
-    to {
-        clip-path: circle(100%);
-        opacity: 1;
-    }
-}
-
-@keyframes heart-out{
-    from {
-        clip-path: circle(100%);
-        opacity: 1;
-    }
-
-    to {
-        clip-path: circle(0%);
-        opacity: 1;
-    }
-}
+/* Loader dots animation */
 
 @keyframes lds-ellipsis1 {
     0% {
@@ -49,6 +27,8 @@
     }
   }
 
+  /* Loader animation */
+
   @keyframes loader-page {
     0% {
       opacity: 1;
@@ -65,6 +45,8 @@
         z-index: -1;
     }
   }
+
+  /* Courses animation */
 
   @keyframes courses-anim {
     0% {
